Added comments and modified js files files as per task requirement

--- a/3_methods/client/index.html
+++ b/3_methods/client/index.html
@@ -9,17 +9,14 @@
 </head>
 
 <body>
-    
+
     <div id="listsDiv">
         <ol type="1">
 
-            <!-- <form action="/postReq" method="POST">
-                <button type="submit"> Submit </button>
-            </form> -->
-
-            <li id="link1" onclick="postReqFunction()"> Click here to test POST request </li>
-            <li id="link2" onclick="putReqFunction()"> Click here to test PUT request </li>
-            <li id="link3" onclick="deleteReqFunction()"> Click here to test DELETE request </li>
+            <li id="link1" onclick="postReqFunction()"><a href="#postReq">Click here to test POST request</a> </li>
+            <li id="link2" onclick="putReqFunction()"><a href="#putReq"> Click here to test PUT request </a></li>
+            <li id="link3" onclick="deleteReqFunction()"><a href="#deleteReq"> Click here to test DELETE request </a>
+            </li>
 
         </ol>
         <p id="clickMsg"></p>
