--- a/3_methods/server/index.html
+++ b/3_methods/server/index.html
@@ -10,7 +10,7 @@
 
 <body>
     <h2>This is the server side code. Please visit client at <a href="http://localhost:5500">localhost:5500</a></h2>
-    <p>Note: <br>
+    <p>Note: Follow the below steps: <br>
         1. Please go the '3_methods/client' directory and make the HTTP server up on port 5500 using 'python -m SimpleHTTPServer 5500'. <br>
         2. Now, visit https://localhost:5500
     </p>
